Master dataset file- country codes

--- a/model.ipynb
+++ b/model.ipynb
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "0b24c9be",
+   "id": "85a3c20f",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "6f7c25dc",
+   "id": "64a81abe",
    "metadata": {
     "scrolled": true
    },
@@ -196,9 +196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "449700a5",
-   "metadata": {},
+   "execution_count": 96,
+   "id": "16aea5d2",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -233,54 +235,369 @@
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "Columns must be same length as key",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_4480/2317065435.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_LPI\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Country\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclean_country\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_LPI\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Country\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_format\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"alpha-2\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#cols = [\"Country\"]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#for col in df_LPI.columns:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#    if \"Score\" in col:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3965\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_setitem_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3966\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3967\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_set_item_frame_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3968\u001b[0m         elif (\n\u001b[1;32m   3969\u001b[0m             \u001b[0mis_list_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_set_item_frame_value\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   4095\u001b[0m             \u001b[0mlen_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcols\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4096\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen_cols\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4097\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Columns must be same length as key\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4098\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4099\u001b[0m             \u001b[0;31m# align right-hand-side columns if self.columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Columns must be same length as key"
-     ]
-    }
-   ],
-   "source": [
-    "df_LPI[\"Country\"] = clean_country(df_LPI, \"Country\", output_format=\"alpha-2\")\n",
-    "\n",
-    "#cols = [\"Country\"]\n",
-    "#for col in df_LPI.columns:\n",
-    "#    if \"Score\" in col:\n",
-    "#            cols.append(col)\n",
-    "#df[] = df_LPI[cols].groupby([\"Country\"]).mean(axis=1)\n",
-    "df_LPI[\"Country\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "29ea19cd",
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>population (2023)</th>\n",
+       "      <th>area</th>\n",
+       "      <th>landAreaKm</th>\n",
+       "      <th>unMember</th>\n",
+       "      <th>netChange</th>\n",
+       "      <th>growthRate</th>\n",
+       "      <th>worldPercentage</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Infrastructure Grouped Rank</th>\n",
+       "      <th>International Shipments Score</th>\n",
+       "      <th>International Shipments Grouped Rank</th>\n",
+       "      <th>Logistics Competence and Quality Score</th>\n",
+       "      <th>Logistics Competence and Quality Grouped Rank</th>\n",
+       "      <th>Timeliness Score</th>\n",
+       "      <th>Timeliness Grouped Rank</th>\n",
+       "      <th>Tracking and Tracing Score</th>\n",
+       "      <th>Tracking and Tracing Grouped Rank</th>\n",
+       "      <th>LogPerf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>6014723.0</td>\n",
+       "      <td>710.0</td>\n",
+       "      <td>718.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0012</td>\n",
+       "      <td>0.0065</td>\n",
+       "      <td>0.0008</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.316667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>5545475.0</td>\n",
+       "      <td>338424.0</td>\n",
+       "      <td>303940.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.0009</td>\n",
+       "      <td>0.0007</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>5910913.0</td>\n",
+       "      <td>43094.0</td>\n",
+       "      <td>40000.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0009</td>\n",
+       "      <td>0.0049</td>\n",
+       "      <td>0.0007</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.050000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>83294633.0</td>\n",
+       "      <td>357114.0</td>\n",
+       "      <td>349390.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>-0.0012</td>\n",
+       "      <td>-0.0009</td>\n",
+       "      <td>0.0104</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>17618299.0</td>\n",
+       "      <td>41850.0</td>\n",
+       "      <td>33670.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0017</td>\n",
+       "      <td>0.0031</td>\n",
+       "      <td>0.0022</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.033333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 27 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0    4.316667\n",
-       "1    4.166667\n",
-       "2    4.050000\n",
-       "3    4.066667\n",
-       "4    4.033333\n",
-       "Name: LogPerf, dtype: float64"
+       "   Unnamed: 0  ID      Country  population (2023)      area  landAreaKm  \\\n",
+       "0           0   0    Singapore          6014723.0     710.0       718.0   \n",
+       "1           1   1      Finland          5545475.0  338424.0    303940.0   \n",
+       "2           2   2      Denmark          5910913.0   43094.0     40000.0   \n",
+       "3           3   3      Germany         83294633.0  357114.0    349390.0   \n",
+       "4           4   4  Netherlands         17618299.0   41850.0     33670.0   \n",
+       "\n",
+       "  unMember  netChange  growthRate  worldPercentage  ...  \\\n",
+       "0     True     0.0012      0.0065           0.0008  ...   \n",
+       "1     True     0.0001      0.0009           0.0007  ...   \n",
+       "2     True     0.0009      0.0049           0.0007  ...   \n",
+       "3     True    -0.0012     -0.0009           0.0104  ...   \n",
+       "4     True     0.0017      0.0031           0.0022  ...   \n",
+       "\n",
+       "   Infrastructure Grouped Rank  International Shipments Score  \\\n",
+       "0                          1.0                            4.0   \n",
+       "1                          5.0                            4.1   \n",
+       "2                          9.0                            3.6   \n",
+       "3                          3.0                            3.7   \n",
+       "4                          5.0                            3.7   \n",
+       "\n",
+       "   International Shipments Grouped Rank  \\\n",
+       "0                                   2.0   \n",
+       "1                                   1.0   \n",
+       "2                                  14.0   \n",
+       "3                                   8.0   \n",
+       "4                                   8.0   \n",
+       "\n",
+       "   Logistics Competence and Quality Score  \\\n",
+       "0                                     4.4   \n",
+       "1                                     4.2   \n",
+       "2                                     4.1   \n",
+       "3                                     4.2   \n",
+       "4                                     4.2   \n",
+       "\n",
+       "   Logistics Competence and Quality Grouped Rank  Timeliness Score  \\\n",
+       "0                                            1.0               4.3   \n",
+       "1                                            3.0               4.3   \n",
+       "2                                            9.0               4.1   \n",
+       "3                                            3.0               4.1   \n",
+       "4                                            3.0               4.0   \n",
+       "\n",
+       "   Timeliness Grouped Rank  Tracking and Tracing Score  \\\n",
+       "0                      1.0                         4.4   \n",
+       "1                      1.0                         4.2   \n",
+       "2                     10.0                         4.3   \n",
+       "3                     10.0                         4.2   \n",
+       "4                     17.0                         4.2   \n",
+       "\n",
+       "   Tracking and Tracing Grouped Rank   LogPerf  \n",
+       "0                                1.0  4.316667  \n",
+       "1                                3.0  4.166667  \n",
+       "2                                2.0  4.050000  \n",
+       "3                                3.0  4.066667  \n",
+       "4                                3.0  4.033333  \n",
+       "\n",
+       "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_LPI.head()"
+    "cols = []\n",
+    "for col in df_LPI.columns:\n",
+    "    if \"Score\" in col:\n",
+    "            cols.append(col)\n",
+    "            \n",
+    "df_LPI[\"LogPerf\"] = df_LPI[cols].mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "5fe70c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alper/anaconda3/lib/python3.8/site-packages/dask/dataframe/core.py:6597: FutureWarning: Meta is not valid, `map_partitions` and `map_overlap` expects output to be a pandas object. Try passing a pandas object as meta or a dict or tuple representing the (name, dtype) of the columns. In the future the meta you passed will not work.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|                                                     | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country Cleaning Report:\n",
+      "\t248 values cleaned (99.2%)\n",
+      "\t2 values unable to be parsed (0.8%), set to NaN\n",
+      "Result contains 248 (99.2%) values in the correct format and 2 null values (0.8%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_LPI = clean_country(df_LPI, \"Country\", output_format=\"alpha-2\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "29ea19cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country_clean</th>\n",
+       "      <th>LogPerf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SG</td>\n",
+       "      <td>4.316667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FI</td>\n",
+       "      <td>4.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DK</td>\n",
+       "      <td>4.050000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DE</td>\n",
+       "      <td>4.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NL</td>\n",
+       "      <td>4.033333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country_clean   LogPerf\n",
+       "0            SG  4.316667\n",
+       "1            FI  4.166667\n",
+       "2            DK  4.050000\n",
+       "3            DE  4.066667\n",
+       "4            NL  4.033333"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_LPI = df_LPI[[\"Country_clean\", \"LogPerf\"]]"
    ]
   },
   {
