--- a/main.ipynb
+++ b/main.ipynb
@@ -5,19 +5,7 @@
    "execution_count": 1,
    "id": "1e9f7a77-e7b9-44a8-b84d-6e271f1c7801",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'dataprep'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Packages needed\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdataprep\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclean\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m clean_country\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'dataprep'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Packages needed\n",
     "import pandas as pd\n",
@@ -26,35 +14,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "02d9e991-3427-46c6-8eaa-288640cd919d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Paths to datasets\n",
     "train_data = \"datasets_hi4/train-data.csv\"\n",
-    "GSPCI_data = \"datasets_hi4/extra-dataset/GSCPI_data.csv\"\n",
+    "GSCPI_data = \"datasets_hi4/extra-dataset/GSCPI_data.csv\"\n",
     "LPI_data = \"datasets_hi4/extra-dataset/LPIextend.csv\"\n",
     "country_code = \"datasets_hi4/extra-dataset/country_code.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8be3bd9c-699d-4cda-a843-702024c805b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initializing datasets\n",
     "td = pd.read_csv(train_data, sep=\";\")\n",
-    "GSPCId = pd.read_csv(GSPCI_data, sep=\",\")\n",
-    "LPId = pd.read_csv(LPI_data, sep=\",\")\n",
-    "cd = pd.read_csv(country_code, sep=\",\")"
+    "GSCPId = pd.read_csv(GSCPI_data, sep=\",\")\n",
+    "LPId = pd.read_csv(LPI_data, sep=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "76031a25-07d2-4e04-b5fb-560021e5faa3",
    "metadata": {},
    "outputs": [],
@@ -67,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "90169fd5-a235-4c08-8f77-58de1994199d",
    "metadata": {},
    "outputs": [],
@@ -77,10 +64,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "993292e6-827a-4413-84eb-e0c2f758b827",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alper/anaconda3/lib/python3.8/site-packages/dask/dataframe/core.py:6597: FutureWarning: Meta is not valid, `map_partitions` and `map_overlap` expects output to be a pandas object. Try passing a pandas object as meta or a dict or tuple representing the (name, dtype) of the columns. In the future the meta you passed will not work.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|                                                     | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country Cleaning Report:\n",
+      "\t248 values cleaned (99.2%)\n",
+      "\t2 values unable to be parsed (0.8%), set to NaN\n",
+      "Result contains 248 (99.2%) values in the correct format and 2 null values (0.8%)\n"
+     ]
+    }
+   ],
    "source": [
     "# Merging LPI Mean score to train data\n",
     "columns = []\n",
@@ -89,13 +109,13 @@
     "        columns.append(column)\n",
     "LPId[\"LPI Mean Score\"] = LPId[columns].mean(axis=1)\n",
     "LPId = clean_country(LPId, \"Country\", output_format=\"alpha-2\", inplace=True)\n",
-    "LPId = LPId[[\"Country (A2)\", \"LPI Mean Score\"]].rename(columns={\"Country (A2)\": \"Country\"})\n",
+    "LPId = LPId[[\"Country_clean\", \"LPI Mean Score\"]].rename(columns={\"Country_clean\": \"Country\"})\n",
     "td = pd.merge(td, LPId, on = \"Country\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3169283e-1c13-4d85-88f6-61388e1090f8",
    "metadata": {},
    "outputs": [],
@@ -118,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "874f7b21-1955-44ca-8dcb-7a0be1be8864",
    "metadata": {},
    "outputs": [],
@@ -131,19 +151,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7864547d-db3b-4ef8-8fb1-b14b3b533205",
    "metadata": {},
    "outputs": [],
    "source": [
-    "GSPCId[\"Year\"] = GSCPId[\"Year-Month\"].str.slice(stop=4)\n",
+    "GSCPId[\"Year\"] = GSCPId[\"Year-Month\"].str.slice(stop=4)\n",
     "GSCPId[\"Quarter\"] = pd.to_numeric(GSCPId[\"Year-Month\"].str.slice(start=5))//3\n",
     "GSCPId[\"Quarter\"] = GSCPId[\"Quarter\"].astype(str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "501958bb-a6f5-46fc-806b-99554a30e18a",
    "metadata": {},
    "outputs": [],
@@ -153,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "abcaae78-6e97-474a-842a-70f170ba0aaa",
    "metadata": {},
    "outputs": [],
@@ -163,12 +183,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "dad018bc-bb21-49d4-b2e2-3ea32b428dcf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "td.to_csv(\"datesets_hi4/train_data_extra.csv\",sep=\";\")"
+    "td.to_csv(\"datasets_hi4/train_data_extra.csv\",sep=\";\")"
    ]
   }
  ],
@@ -188,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
