--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "e3309500",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix, ConfusionMatrixDisplay, roc_curve, auc, precision_recall_curve\n",
     "from sklearn.utils import resample, shuffle\n",
     "\n",
-    "from xgboost.sklearn import XGBClassifier\n",
+    "from xgboost.sklearn import XGBClassifier, XGBRegressor\n",
     "import xgboost as xgb\n",
     "\n",
     "## weighted stats\n",
@@ -42,13 +42,13 @@
     "## For time\n",
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
-    "##\n",
+    "## For country encoding\n",
     "from dataprep.clean import clean_country"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b0d97118",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d0dc0830",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1b4bbc6f",
    "metadata": {},
    "outputs": [],
@@ -117,249 +117,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "646c43e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"datasets_hi4/train-data.csv\", sep=\";\")\n",
     "df_GSCPI = pd.read_csv(\"datasets_hi4/extra-dataset/GSCPI_data.csv\")\n",
-    "df_LPI = pd.read_csv(\"datasets_hi4/extra-dataset/LPIextend.csv\")"
+    "df_LPI = pd.read_csv(\"datasets_hi4/extra-dataset/LPIextend.csv\")\n",
+    "df_econ = pd.read_csv(\"datasets_hi4/extra-dataset/worldbank_economic_data.csv\")\n",
+    "df_inf = pd.read_csv(\"datasets_hi4/extra-dataset/worldbank_inflation_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f2dc731d",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "date = df[\"Date\"].str.split(n=1, expand=True)\n",
+    "df[\"Year\"] = date[1]\n",
+    "df[\"Trisem\"] = pd.to_numeric(date[0].str.slice(stop=3).replace(month_lib))//3\n",
+    "df[\"Trisem\"] = df[\"Trisem\"].astype(str)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f66bc05f",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>id_product</th>\n",
-       "      <th>Region</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Site</th>\n",
-       "      <th>Operations</th>\n",
-       "      <th>Zone</th>\n",
-       "      <th>Cluster</th>\n",
-       "      <th>Reference proxy</th>\n",
-       "      <th>Product  Line proxy</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Customer Persona proxy</th>\n",
-       "      <th>Strategic Product Family proxy</th>\n",
-       "      <th>Product Life cycel status</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Month 1</th>\n",
-       "      <th>Month 2</th>\n",
-       "      <th>Month 3</th>\n",
-       "      <th>Month 4</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Quarter</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>645874</td>\n",
-       "      <td>156160</td>\n",
-       "      <td>EUROPE</td>\n",
-       "      <td>DE</td>\n",
-       "      <td>NL_DC_Venray</td>\n",
-       "      <td>Europe Operations</td>\n",
-       "      <td>DACH</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>reference-13523</td>\n",
-       "      <td>Product Line-4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Customer Segmentation-3</td>\n",
-       "      <td>Strategic Product Family-12</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>may-aug 2021</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>469488</td>\n",
-       "      <td>224631</td>\n",
-       "      <td>CHINA</td>\n",
-       "      <td>CN</td>\n",
-       "      <td>CN_DC_Shanghai</td>\n",
-       "      <td>China Operations</td>\n",
-       "      <td>China &amp; HK</td>\n",
-       "      <td>China</td>\n",
-       "      <td>reference-12778</td>\n",
-       "      <td>Product Line-4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Customer Segmentation-14</td>\n",
-       "      <td>Strategic Product Family-9</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>jan-apr 2021</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>348904</td>\n",
-       "      <td>104047</td>\n",
-       "      <td>EUROPE</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>NL_DC_HLD</td>\n",
-       "      <td>Europe Operations</td>\n",
-       "      <td>UK and Ireland</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>reference-3513</td>\n",
-       "      <td>Product Line-3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Customer Segmentation-23</td>\n",
-       "      <td>Strategic Product Family-7</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>jan-apr 2021</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1725822</td>\n",
-       "      <td>11823</td>\n",
-       "      <td>EAJP</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>AU_DC_Perth</td>\n",
-       "      <td>International Operations</td>\n",
-       "      <td>Pacific</td>\n",
-       "      <td>Australia</td>\n",
-       "      <td>reference-672</td>\n",
-       "      <td>Product Line-1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Customer Segmentation-11</td>\n",
-       "      <td>Strategic Product Family-3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>jan-apr 2023</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>404781</td>\n",
-       "      <td>159924</td>\n",
-       "      <td>EUROPE</td>\n",
-       "      <td>ES</td>\n",
-       "      <td>NL_DC_HLD</td>\n",
-       "      <td>Europe Operations</td>\n",
-       "      <td>Iberia</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>reference-3496</td>\n",
-       "      <td>Product Line-3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Customer Segmentation-14</td>\n",
-       "      <td>Strategic Product Family-7</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>jan-apr 2021</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     index  id_product  Region Country            Site  \\\n",
-       "0   645874      156160  EUROPE      DE    NL_DC_Venray   \n",
-       "1   469488      224631   CHINA      CN  CN_DC_Shanghai   \n",
-       "2   348904      104047  EUROPE      GB       NL_DC_HLD   \n",
-       "3  1725822       11823    EAJP      AU     AU_DC_Perth   \n",
-       "4   404781      159924  EUROPE      ES       NL_DC_HLD   \n",
-       "\n",
-       "                 Operations            Zone         Cluster  Reference proxy  \\\n",
-       "0         Europe Operations            DACH         Germany  reference-13523   \n",
-       "1          China Operations      China & HK           China  reference-12778   \n",
-       "2         Europe Operations  UK and Ireland  United Kingdom   reference-3513   \n",
-       "3  International Operations         Pacific       Australia    reference-672   \n",
-       "4         Europe Operations          Iberia           Spain   reference-3496   \n",
-       "\n",
-       "  Product  Line proxy  ...    Customer Persona proxy  \\\n",
-       "0      Product Line-4  ...   Customer Segmentation-3   \n",
-       "1      Product Line-4  ...  Customer Segmentation-14   \n",
-       "2      Product Line-3  ...  Customer Segmentation-23   \n",
-       "3      Product Line-1  ...  Customer Segmentation-11   \n",
-       "4      Product Line-3  ...  Customer Segmentation-14   \n",
-       "\n",
-       "  Strategic Product Family proxy Product Life cycel status          Date  \\\n",
-       "0    Strategic Product Family-12                       NaN  may-aug 2021   \n",
-       "1     Strategic Product Family-9                       NaN  jan-apr 2021   \n",
-       "2     Strategic Product Family-7                       NaN  jan-apr 2021   \n",
-       "3     Strategic Product Family-3                       NaN  jan-apr 2023   \n",
-       "4     Strategic Product Family-7                       NaN  jan-apr 2021   \n",
-       "\n",
-       "  Month 1 Month 2 Month 3 Month 4  Year Quarter  \n",
-       "0       0       0       0       0  2021       1  \n",
-       "1       0       1       0       0  2021       0  \n",
-       "2       0       2       0       0  2021       0  \n",
-       "3       0       0       0       0  2023       0  \n",
-       "4       0       0       0       0  2021       0  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "id": "cdcbfa71",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "date = df[\"Date\"].str.split(n=1, expand=True)\n",
-    "df[\"Year\"] = date[1]\n",
-    "df[\"Quarter\"] = pd.to_numeric(date[0].str.slice(stop=3).replace(month_lib))//3\n",
-    "df[\"Quarter\"] = df[\"Quarter\"].astype(str)\n",
-    "df.head()"
+    "df.drop_duplicates(inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "159dad6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in [\"Month 1\", \"Month 2\", \"Month 3\", \"Month 4\"]:\n",
+    "    df[col] = pd.to_numeric(df[col].str.replace(\" \", \"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "8836c1bc",
    "metadata": {
     "scrolled": true
@@ -389,7 +197,7 @@
        "      <th>Year-Month</th>\n",
        "      <th>GSCPI</th>\n",
        "      <th>Year</th>\n",
-       "      <th>Quarter</th>\n",
+       "      <th>Trisem</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -433,50 +241,50 @@
        "</div>"
       ],
       "text/plain": [
-       "  Year-Month     GSCPI  Year Quarter\n",
-       "0    2020-01  0.090108  2020       0\n",
-       "1    2020-02  1.191976  2020       0\n",
-       "2    2020-03  2.546002  2020       1\n",
-       "3    2020-04  3.161703  2020       1\n",
-       "4    2020-05  2.537110  2020       1"
+       "  Year-Month     GSCPI  Year Trisem\n",
+       "0    2020-01  0.090108  2020      0\n",
+       "1    2020-02  1.191976  2020      0\n",
+       "2    2020-03  2.546002  2020      1\n",
+       "3    2020-04  3.161703  2020      1\n",
+       "4    2020-05  2.537110  2020      1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_GSCPI[\"Year\"] = df_GSCPI[\"Year-Month\"].str.slice(stop=4)\n",
-    "df_GSCPI[\"Quarter\"] = pd.to_numeric(df_GSCPI[\"Year-Month\"].str.slice(start=5))//3\n",
-    "df_GSCPI[\"Quarter\"] = df_GSCPI[\"Quarter\"].astype(str)\n",
+    "df_GSCPI[\"Trisem\"] = pd.to_numeric(df_GSCPI[\"Year-Month\"].str.slice(start=5))//3\n",
+    "df_GSCPI[\"Trisem\"] = df_GSCPI[\"Trisem\"].astype(str)\n",
     "df_GSCPI.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "9b1d10fc",
+   "execution_count": 10,
+   "id": "a493bfdf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_GSCPI = df_GSCPI.groupby([\"Year\", \"Quarter\"], as_index=False)[\"GSCPI\"].mean()"
+    "df_GSCPI = df_GSCPI.groupby([\"Year\", \"Trisem\"], as_index=False)[\"GSCPI\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d7f8b97f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdf_c = pd.merge(df, df_GSCPI, on=[\"Year\", \"Trisem\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e8eabb91",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdf_c = pd.merge(df, df_GSCPI, on=[\"Year\", \"Quarter\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "84085ecb",
+   "id": "b2f28c7f",
    "metadata": {
     "scrolled": true
    },
@@ -527,8 +335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "07101506",
+   "execution_count": 13,
+   "id": "c208a692",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,23 +345,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "d714cb02",
+   "execution_count": 15,
+   "id": "61120617",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alper/anaconda3/lib/python3.8/site-packages/dask/dataframe/core.py:6597: FutureWarning: Meta is not valid, `map_partitions` and `map_overlap` expects output to be a pandas object. Try passing a pandas object as meta or a dict or tuple representing the (name, dtype) of the columns. In the future the meta you passed will not work.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "(3456754, 23)"
+       "  0%|                                                     | 0/8 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country Cleaning Report:\n",
+      "\t8041 values cleaned (98.94%)\n",
+      "\t86 values unable to be parsed (1.06%), set to NaN\n",
+      "Result contains 8041 (98.94%) values in the correct format and 86 null values (1.06%)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_33616/1381205224.py:11: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "  dfi_grouped = df_inf.groupby([\"Year\", \"Trisem\", \"Country\"])[\"Energy Price Index\", \"Headline Consumer Price Index\"].mean()\n"
+     ]
     }
    ],
    "source": [
-    "mdf.shape"
+    "inf_years = np.array(list(map(lambda x: x.split('-')[0], df_inf[\"Year-Month\"].to_list())))\n",
+    "inf_months = np.array(list(map(lambda x: int(x.split('-')[1]), df_inf[\"Year-Month\"].to_list())))\n",
+    "\n",
+    "df_inf[\"Year\"] = inf_years\n",
+    "df_inf[\"Trisem\"] = list(map(str, (inf_months - 1)//4))\n",
+    "\n",
+    "df_inf =  clean_country(df_inf, \"Country\", output_format=\"alpha-2\").dropna(subset = \"Country\")\n",
+    "df_inf.drop(columns = ['Country', 'Year-Month'], inplace = True)\n",
+    "df_inf.rename(columns = {\"Country_clean\": \"Country\"}, inplace = True)\n",
+    "\n",
+    "dfi_grouped = df_inf.groupby([\"Year\", \"Trisem\", \"Country\"])[\"Energy Price Index\", \"Headline Consumer Price Index\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "90e7a684",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdf2 = pd.merge(mdf, dfi_grouped, how = \"left\", on = [\"Year\", \"Trisem\", \"Country\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c147b153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = pd.read_csv(\"datasets_hi4/X_test.csv\", sep=\";\")\n",
+    "y_test = pd.read_csv(\"datasets_hi4/y_test_example.csv\", sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c4148814",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = X_test[\"Date\"].str.split(n=1, expand=True)\n",
+    "X_test[\"Year\"] = date[1]\n",
+    "X_test[\"Trisem\"] = pd.to_numeric(date[0].str.slice(stop=3).replace(month_lib))//3\n",
+    "X_test[\"Trisem\"] = X_test[\"Trisem\"].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "06a5affe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdf_test = pd.merge(X_test, df_GSCPI, on=[\"Year\", \"Trisem\"])\n",
+    "mdff_test = pd.merge(mdf_test, df_LPI, on = \"Country\")\n",
+    "mX_test = pd.merge(mdff_test, dfi_grouped, how = \"left\", on = [\"Year\", \"Trisem\", \"Country\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be099ffc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = XGBRegressor()"
    ]
   }
  ],
