test sets added

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "id": "e3309500",
    "metadata": {},
    "outputs": [],
@@ -25,8 +25,10 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix, ConfusionMatrixDisplay, roc_curve, auc, precision_recall_curve\n",
     "from sklearn.utils import resample, shuffle\n",
     "\n",
-    "from xgboost.sklearn import XGBClassifier, XGBRegressor\n",
+    "from xgboost.sklearn import XGBClassifier\n",
     "import xgboost as xgb\n",
+    "from xgboost import \n",
+    "from catboost import CatBoostRegressor\n",
     "\n",
     "## weighted stats\n",
     "from statsmodels.stats.weightstats import DescrStatsW\n",
@@ -132,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f2dc731d",
+   "id": "4aaf6cfd",
    "metadata": {
     "scrolled": false
    },
@@ -147,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cdcbfa71",
+   "id": "825d4ab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "159dad6f",
+   "id": "f40c660f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a493bfdf",
+   "id": "8bca64d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d7f8b97f",
+   "id": "cbc09a7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b2f28c7f",
+   "id": "1b8c3ed1",
    "metadata": {
     "scrolled": true
    },
@@ -336,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c208a692",
+   "id": "7ff634f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "61120617",
+   "id": "801ea77a",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "90e7a684",
+   "id": "fa63fdae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c147b153",
+   "id": "444a6372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c4148814",
+   "id": "20d1b75d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "06a5affe",
+   "id": "86fb3a2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,12 +454,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "be099ffc",
+   "execution_count": 26,
+   "id": "4688afdf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = XGBRegressor()"
+    "X_train = mdf2.drop(columns = [\"Month 4\"])\n",
+    "y_train = mdf2[\"Month 4\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "41812c66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model_cbr = CatBoostRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "889b5151",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model_cbr.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22442aba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model_xgb = xgb.train(dtrain, params = {})"
    ]
   }
  ],
